--- a/bio.html
+++ b/bio.html
@@ -14,7 +14,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <script src="https://cdn.jsdelivr.net/npm/p5@1.3.1/lib/p5.js"></script>
 
-    <title>Karthikeshwar's website</title>
+    <title>Bio</title>
 </head>
 
 <body>
@@ -22,7 +22,7 @@
         <script src="ray.js"></script>
         <script src="boundary.js"></script>
         <script src="particle.js"></script>
-        <script src="sketch.js"></script>
+        <script src="sketch-bio.js"></script>
     </div>
 
     <div>
